draw_text: remove old readme txt file / draw_text Makefile: clean pyc files

--- a/draw_text/Makefile
+++ b/draw_text/Makefile
@@ -13,3 +13,6 @@ standalone: main.c a.out
 	$(CC) -o $(STANDALONE_OUT) $(SOURCE) -I$(INCLUDES) $(LIB) 
 
 all: draw_text.so standalone lib
+
+clean:
+	rm -f *.pyc
