travis CI: fix SDL ttf package name

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 before_install:
     - sudo apt-get -qq update
     - sudo apt-get install sdl1.2debian -y
-    - sudo apt-get install sdl2.0-ttf -y
+    - sudo apt-get install libsdl-ttf2.0-dev -y
 install:
     - make build
     - pip install -r requirements/travis-requirements.txt
